force-app/src/objects/ffvat__VATGroupItem__c.object
<CustomObject>
    <fields>
        <fullName>ffvat__Company__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Tax Group Companies</relationshipLabel>
        <relationshipName>VATGroupItems</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffvat__DateAdded__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date Added</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ffvat__VATGroup__c</fullName>
        <label>Tax Group</label>
        <referenceTo>ffvat__VATGroup__c</referenceTo>
        <relationshipLabel>Tax Group Companies</relationshipLabel>
        <relationshipName>VATGroupItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Tax Group Company</label>
    <listViews>
        <fullName>ffvat__All</fullName>
        <columns>NAME</columns>
        <columns>ffvat__VATGroup__c</columns>
        <columns>ffvat__Company__c</columns>
        <columns>ffvat__DateAdded__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>VGI{000000}</displayFormat>
        <label>Tax Group Company Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tax Group Companies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>